[gd_scene load_steps=11 format=3 uid="uid://yspp5xirbg8g"]

[ext_resource type="Script" path="res://scripts/start_level.gd" id="1_wgawd"]
[ext_resource type="PackedScene" uid="uid://pgcso5d8ijv5" path="res://scenes/levels/level_2.tscn" id="2_qi3yc"]
[ext_resource type="PackedScene" uid="uid://bi5deb2iy8e4l" path="res://scenes/components/laser_beam.tscn" id="6_swq6s"]
[ext_resource type="PackedScene" uid="uid://busjvgjgilmp3" path="res://scenes/components/game_borders.tscn" id="7_uuy6w"]
[ext_resource type="PackedScene" uid="uid://jqcaoee85fv4" path="res://scenes/components/activation_plate.tscn" id="7_v7btj"]
[ext_resource type="PackedScene" uid="uid://kg54s01ginlu" path="res://scenes/components/chest.tscn" id="8_juvtn"]
[ext_resource type="Texture2D" uid="uid://3ted24g1yntk" path="res://assets/img/tile_map_unit_18px.png" id="9_qvmfp"]
[ext_resource type="PackedScene" uid="uid://c2qevafp5drm4" path="res://scenes/components/exit_area.tscn" id="10_fugja"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5famh"]
texture = ExtResource("9_qvmfp")
texture_region_size = Vector2i(18, 18)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)

[sub_resource type="TileSet" id="TileSet_hktew"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 7
sources/3 = SubResource("TileSetAtlasSource_5famh")

[node name="StartLevel" type="Node2D"]
script = ExtResource("1_wgawd")
next_level = ExtResource("2_qi3yc")
metadata/_edit_vertical_guides_ = [51.0, 321.0, 327.0, 45.0, 69.0, 87.0, 105.0, 123.0, 141.0, 159.0, 177.0, 195.0, 213.0, 231.0, 249.0, 267.0, 285.0, 303.0]
metadata/_edit_horizontal_guides_ = [321.0, 51.0, 45.0, 327.0, 69.0, 87.0, 105.0, 123.0, 141.0, 159.0, 177.0, 195.0, 213.0, 231.0, 249.0, 267.0, 285.0, 303.0]

[node name="Objects" type="Node2D" parent="."]

[node name="LaserBeam" parent="Objects" instance=ExtResource("6_swq6s")]
position = Vector2(287, 69)

[node name="ActivationPlate" parent="Objects" instance=ExtResource("7_v7btj")]
position = Vector2(63, 60)

[node name="Chest" parent="Objects" instance=ExtResource("8_juvtn")]
position = Vector2(249, 268)

[node name="Map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Map"]
texture_filter = 1
position = Vector2(51, 51)
tile_set = SubResource("TileSet_hktew")
format = 2
layer_0/tile_data = PackedInt32Array(851968, 458755, 0, 851969, 458755, 0, 851970, 131075, 1, 786432, 393219, 0, 786433, 393219, 0, 786434, 131075, 0, 917508, 393219, 1, 786437, 131075, 0, 851973, 458755, 1, 917509, 458755, 1, 589828, 65539, 1, 589829, 131075, 1, 458760, 393219, 0, 458759, 393219, 0, 458758, 393219, 0, 458757, 393219, 0, 458756, 65539, 0, 458761, 393219, 0, 458762, 393219, 0, 458763, 393219, 0, 524300, 458755, 0, 458764, 393219, 0, 458765, 393219, 0, 524301, 458755, 0, 524302, 458755, 0, 458766, 393219, 0, 589824, 458755, 0, 589825, 131075, 1, 524288, 524291, 0, 524289, 458755, 1, 458753, 458755, 1, 458752, 524291, 0, 262144, 131075, 0, 327680, 458755, 1, 393216, 655363, 0, 196613, 65539, 0, 262149, 393219, 1, 327685, 65539, 1, 327686, 458755, 0, 327687, 458755, 0, 327688, 458755, 0, 327689, 458755, 0, 262153, 524291, 0, 262154, 458755, 1, 327690, 131075, 1, 196618, 131075, 0, 196617, 393219, 0, 196616, 393219, 0, 196615, 393219, 0, 196614, 393219, 0, 262150, 524291, 0, 262151, 524291, 0, 262152, 524291, 0, 65542, 327683, 1, 65543, 262147, 1, 65537, 327683, 1, 65536, 327683, 1, 65538, 327683, 1, 65541, 327683, 1, 65545, 3, 1, 196621, 589827, 0, 262157, 458755, 0, 262158, 458755, 0, 196622, 524291, 0, 131086, 393219, 0, 131085, 65539, 0, 786436, 65539, 0, 851972, 393219, 1, 196620, 65539, 0, 262156, 65539, 1, 14, 524291, 1, 196611, 3, 1, 393217, 131075, 0, 65539, 327683, 1, 65540, 327683, 1, 524296, 458755, 0, 524297, 458755, 0, 524298, 458755, 0, 524299, 458755, 0, 524292, 393219, 1, 524293, 655363, 1, 524294, 458755, 0, 524295, 458755, 0)

[node name="GameBorders" parent="Map" instance=ExtResource("7_uuy6w")]

[node name="ExitArea" parent="Map" instance=ExtResource("10_fugja")]
position = Vector2(312, 60)

[connection signal="chest_outside" from="Objects/ActivationPlate" to="." method="_on_activation_plate_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate" to="." method="_on_activation_plate_chest_touch"]
